--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,14 +26,19 @@
           <li class="nav-item active">
             <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
           </li>
-          {{!-- {{#if loggedIn}} --}}
+          {{#if loggedIn}}
           <li class="nav-item">
             <a class="nav-link" href="/dashboard">Dashboard</a>
-            {{!-- {{else}}
-            <a class="nav-link" href="/login">Dashboard</a> --}}
           </li>
+            {{else}}
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Dashboard</a>
+          </li>
+          {{/if}}
           {{#if loggedIn}}
-            <button class="nav-link" class="btn-no-style" id="logout">Logout</button>
+          <li class="nav-item">
+            <a class="nav-link" id="logout">Logout</a>
+          </li>
           {{else}}
           <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
@@ -60,7 +65,3 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
-
-
-
-  
