--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,23 +23,20 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
           </li>
           {{#if loggedIn}}
           <li class="nav-item">
             <a class="nav-link" href="/dashboard">Dashboard</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" id="logout">Logout</a>
+          </li>
             {{else}}
           <li class="nav-item">
             <a class="nav-link" href="/login">Dashboard</a>
           </li>
-          {{/if}}
-          {{#if loggedIn}}
-          <li class="nav-item">
-            <a class="nav-link" id="logout">Logout</a>
-          </li>
-          {{else}}
           <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
           </li>
