--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,20 +1,22 @@
-{{#if post.length}}
-<section class="card border-dark">
+<section class="card border-dark mb-3">
     <div class="card-header">Your Posts</div>
     <div class="postText">
         <ul class="post-list">
-            {{#each post}}
-            <a href="/dashboard/edit/{{id}}">
-                <li class="post-list-item" >
-                    <div>{{title}}</div>
-                    <div>{{format_date postDate}}</div>
-                </li>
-            </a>
-            {{/each}}
+            {{#if posts.length}}
+                {{#each posts as |post|}}
+                <a href="/dashboard/edit/{{id}}">
+                    <li class="post-list-item" >
+                        <div>{{title}} created on {{format_date postDate}}</div>
+                    </li>
+                </a>
+                {{/each}}
+            {{else}}
+            <p class="font-italic mt-2">You have no posts at this time.</p>
+            {{/if}}
         </ul>
     </div>
 </section>
-{{/if}}
+
 
 <section class="card border-dark hide" id="createPost">
     <div class="card-header">Create New Post</div>
