--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,12 +29,15 @@
           <li class="nav-item">
             <a class="nav-link" href="/dashboard">Dashboard</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-          </li>
+          {{#if loggedIn}}
           <li class="nav-item">
             <a class="nav-link" id="logout">Logout</a>
           </li>
+          {{else}}
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+          {{/if}}
         </ul>
       </div>
     </nav>
