--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -28,7 +28,7 @@
             </div>
             <div>
                 <label for="postText" class="form-label">Blog Entry:</label>
-                <input class="form-input w-100 mb-3" id="postText" type="text" name="content"/>
+                <textarea class="form-input w-100 mb-3" id="postText" type="text" name="content"></textarea>
             </div>
             <button type="submit" class="btn btn-info">Submit</button>
         </form>
