--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,44 +1,27 @@
-<article>
-  <a href="/dashboard" class="is-pulled-right"> &larr; back to dashboard</a>
-  <h2 class="title mt-5">Edit</h2>
+<a href="/dashboard" class="is-pulled-right"> &larr; back to dashboard</a>
+
+<div class="container mb-4">
+  <h2 class="my-3">Edit</h2>
   <form id ="editPostForm">
-    <div class='title mt-5' id="postID" type="text" value={{post.id}}>
-    <label for="postid">Post ID:{{post.id}}</label>
-  </div>
     <div>
-        <label for="post-title">Post Title:</label>
+      <label for="post-title">Title:</label><br>
       <input class="input" id="postTitle" type="text" value="{{post.title}}" />
     </div>
     <div>
-        <label for="post-content">Post Entry:</label>
-      <input class="input" id="postText" type="text" value="{{post.content}}" />
+      <label for="post-content">Entry:</label><br>
+      <textarea class="input w-50" id="postText" type="text">{{post.content}}</textarea>
     </div>
-    <div class="is-pulled-right">
-       Created by you on {{format_date post.postDate}}
-      |
-      <a href="/post/{{post.id}}">{{comments.length}} {{format_plural "comment" post.comments.length}}</a>
+    <div class='title' id="post-id" type="text" value={{post.id}}>
+      <label for="postid">Post ID: {{post.id}}</label>
     </div>
-    <button type="submit" class="button button-info">Save post</button>
-    <button type="button" class="button button-info" id= "deletePostBtn">Delete post</button>
+    <div class="is-pulled-right mb-2">
+      Created by you on {{format_date post.postDate}} |
+      <a href="/post/{{post.id}}">Comments</a>
+    </div>
+    <button type="submit" class="btn btn-info">Save post</button>
+    <button type="button" class="btn btn-info" id="deletePostBtn">Delete post</button>
   </form>
-</article>
-
-<section class="card border-dark">
-    <div class="card-header">Comments</div>
-    {{#if this}}
-    {{#each this}}
-        <div class="comment">
-            <p>{{commentText}}</p>
-            <p>&mdash; {{user.username}} on {{format_date commentDate}}</p>
-        </div>
-    {{/each}}
-    {{else}}
-        <div class="comment">
-            <p>There are no comments</p>
-        </div>
-    {{/if}}
-    </div>
-</section> 
+</div>
 
 <script src="/js/edit.js"></script>
 <script src="/js/delete.js"></script>
