--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -11,7 +11,7 @@
       <label for="post-content">Entry:</label><br>
       <textarea class="input w-50" id="postText" type="text">{{post.content}}</textarea>
     </div>
-    <div class='title' id="post-id" type="text" value={{post.id}}>
+    <div class='title' id="postID" type="text" value={{post.id}}>
       <label for="postid">Post ID: {{post.id}}</label>
     </div>
     <div class="is-pulled-right mb-2">
@@ -22,6 +22,7 @@
     <button type="button" class="btn btn-info" id="deletePostBtn">Delete post</button>
   </form>
 </div>
+
 
 <script src="/js/edit.js"></script>
 <script src="/js/delete.js"></script>
